Version 0.2.2   Jul 24, 2022
Ulf Zibis <Ulf.Zibis@CoSoCo.de>

* Cleared source code.
* Merged dupilcate code.

Version 0.2.1   Jul 22, 2022
Ulf Zibis <Ulf.Zibis@CoSoCo.de>

* Updated config files.
* Fixed endless loops by inserting correct casts on iterators.

Version 0.2   May 17, 2008
Dan Bodoh

* Added support for the Treo 650.  Thanks to Raymond Ingles for info
  about the Treo 650 directory structure and testing.
* Now fetches .3g2 videos
* Now fetches audio captions
* Create-date of fetched file is set to create-date of original file
* Cleaned up logging; moved most messages to debug logging

Version 0.1   May 12, 2008
Dan Bodoh

* Changed destination of pictures and videos to $HOME/PalmPictures
* Now uses standard ./configure; make; make install (or 'make local_install'
  for installation to $HOME/.jpilot/plugins)
* Plugin is now named 'libpicsnvideos.so'.  If you used version 0.0,
  manually delete 'picsnvideos.so' from the plugins directory.