@@ -2,7 +2,8 @@ Version 0.2.2   Jul 24, 2022
 Ulf Zibis <Ulf.Zibis@CoSoCo.de>
 
 * Cleared source code.
-* Merged dupilcate code.
+* Merged duplicate code.
+* Freed heap memory.
 
 Version 0.2.1   Jul 22, 2022
 Ulf Zibis <Ulf.Zibis@CoSoCo.de>
